proc-macros/tests/ui/incorrect/rpc/rpc_name_conflict.stderr
error: "foo" is already defined
  --> $DIR/rpc_name_conflict.rs:10:11
   |
10 |     async fn bar(&self) -> RpcResult<u8>;
   |              ^^^
